# SeqQuests

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  CONTENTS.md  ENVIRONMENT.md  GETTING_STARTED.md  LICENSE.md  README.md  REQUIREMENTS.txt  TASKS.md  TECHNICAL_DEBT.md  compile.sh  compile_wasm.sh  get_uniprot.sh  getting_started.md  perf.sh  pyproject.toml  test_data_munger.py  test_report_orig.txt  test_report_py.txt  test_seq_search.py  test_tree_cpp.txt  test_tree_new.txt  test_ui.py  verify_alignment_display.py
c_src/: metal_nws.c  metal_nws.mm  metal_sw.mm  nws.metal  prepare_binary_data.py  prepare_data.py  sw.metal  sw_align_core.cpp  sw_search_metal.mm  tree_builder.cpp
data/: swissprot.dat.txt  swissprot.fasta.txt
dev/: dev_log.md  dev_sw_search_metal.py
docs/: command_runner.md  computation.md  data_munger.md  doclist.js  match_explorer.md  metal_nws.md  metal_sw.md  multiscroller.md  sw_search.md  the-docs.md  tree_builder.md  tree_builder_cpp.md  web_server.md
findings/: METHODS.md  gemini_comments.md  proposed_updates.md  sw_finds_biased.txt  sw_finds_distilled.txt  sw_finds_standard.txt
metal/: README.md  metal_cumsum_int16.py  metal_nws.py  metal_sw.py  requirements.txt  test_metal_exists.py
py/: check_fasta_data.py  check_fasta_integrity.py  check_metal_capabilities.py  command_runner.py  computation.py  config.py  data_munger.py  dev_sw_search_metal.py  filter_twilight.py  job_manager.py  kabsch_3d_align.py  make_doc_images.py  make_pdb_tester.py  match_explorer.py  nws.py  nws_align.py  nws_search.py  pam_converter.py  ready_to_rock.py  (+22 more)
(+140 files in other folders)
